crates/backyard-parser/tests/snapshots/arraylookup__assignment.snap
---
source: crates/backyard-parser/tests/arraylookup.rs
expression: asts
snapshot_kind: text
---
leadings: []
trailings: []
node_type: program
children:
  - leadings: []
    trailings: []
    node_type: assignment
    left:
      leadings: []
      trailings: []
      node_type: array_lookup
      left:
        leadings: []
        trailings: []
        node_type: variable
        name:
          leadings: []
          trailings: []
          node_type: identifier
          name: a
          loc:
            start:
              line: 1
              column: 0
              offset: 0
            end:
              line: 1
              column: 1
              offset: 1
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
      right: ~
      loc:
        start:
          line: 1
          column: 2
          offset: 2
        end:
          line: 1
          column: 3
          offset: 3
    operator: "="
    right:
      leadings: []
      trailings: []
      node_type: number
      value: "5"
      loc:
        start:
          line: 1
          column: 7
          offset: 7
        end:
          line: 1
          column: 7
          offset: 7
    loc:
      start:
        line: 1
        column: 5
        offset: 5
      end:
        line: 1
        column: 7
        offset: 7
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 8
    offset: 8
