crates/backyard-parser/tests/snapshots/arraylookup__basic.snap
---
source: crates/backyard-parser/tests/arraylookup.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: array_lookup
    left:
      node_type: array
      is_short: false
      items:
        - node_type: array_item
          key: ~
          value:
            node_type: number
            value: "1"
            loc:
              start:
                line: 1
                column: 6
                offset: 6
              end:
                line: 1
                column: 6
                offset: 6
            leadings: []
            trailings: []
          loc:
            start:
              line: 1
              column: 6
              offset: 6
            end:
              line: 1
              column: 6
              offset: 6
          leadings: []
          trailings: []
        - node_type: array_item
          key: ~
          value:
            node_type: number
            value: "2"
            loc:
              start:
                line: 1
                column: 9
                offset: 9
              end:
                line: 1
                column: 9
                offset: 9
            leadings: []
            trailings: []
          loc:
            start:
              line: 1
              column: 9
              offset: 9
            end:
              line: 1
              column: 9
              offset: 9
          leadings: []
          trailings: []
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 10
          offset: 10
      leadings: []
      trailings: []
    right:
      node_type: number
      value: "1"
      loc:
        start:
          line: 1
          column: 12
          offset: 12
        end:
          line: 1
          column: 12
          offset: 12
      leadings: []
      trailings: []
    loc:
      start:
        line: 1
        column: 11
        offset: 11
      end:
        line: 1
        column: 13
        offset: 13
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 14
    offset: 14
leadings: []
trailings: []
